# DX12-Project-Raytraced-Ambient-Occlusion

./: .gitignore  CMakeLists.txt  README.md
Core/: AccumilationRenderPass.cpp  AccumilationRenderPass.h  App.cpp  App.h  AppDefines.h  CMakeLists.txt  Camera.cpp  Camera.h  DX12AbstractionUtils.cpp  DX12AbstractionUtils.h  DX12RenderPass.cpp  DX12RenderPass.h  DX12Renderer.cpp  DX12Renderer.h  DX12SyncHandler.cpp  DX12SyncHandler.h  DXRAbstractions.h  DeferredGBufferRenderPass.cpp  DeferredGBufferRenderPass.h  DeferredLightingRenderPass.cpp  DeferredLightingRenderPass.h  DirectXIncludes.h  GPUResource.cpp  GPUResource.h  GraphicsErrorHandling.cpp  GraphicsErrorHandling.h  IndexedRenderPass.cpp  IndexedRenderPass.h  Main.cpp  NonIndexedRenderPass.cpp  NonIndexedRenderPass.h  RaytracedAORenderPass.cpp  RaytracedAORenderPass.h  RenderObject.h  RenderPassArgs.h  RenderPassIncludes.h  Window.cpp  Window.h
shaders/: AccumilationPS.hlsl  CMakeLists.txt  DeferredLightingPS.hlsl  DeferredPixelShader.hlsl  FSQVS.hlsl  PixelShader.hlsl  RTShader.hlsl  VertexShader.hlsl
